# tgvectordb

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: chatbot.py  quickstart.py
tests/: test_core.py  test_ingestors.py  test_locally.py
tgvectordb/: __init__.py  client.py
tgvectordb/embedding/: __init__.py  chunker.py  model.py  quantizer.py
tgvectordb/index/: __init__.py  cache.py  clustering.py  store.py
tgvectordb/ingestors/: __init__.py  docx_ingestor.py  pdf_ingestor.py  registry.py  text_ingestor.py
tgvectordb/search/: __init__.py  engine.py
tgvectordb/telegram/: __init__.py  connection.py  messages.py
tgvectordb/utils/: __init__.py  config.py  serialization.py
